log
Thu 23 Mar 2023 08:21:40 PM UTC: 
 list.c | 38 +++++++++++++++++++++++++++-----------
 1 file changed, 27 insertions(+), 11 deletions(-)
 tests:  9|3
total_score: 35/70
4707287
Thu 23 Mar 2023 08:24:59 PM UTC: 
 list.c | 18 ++++++------------
 1 file changed, 6 insertions(+), 12 deletions(-)
 tests:  9|3
total_score: 35/70
f9ca530
Thu 23 Mar 2023 08:27:21 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:67:20: error: statement with no effect [-Werror=unused-value]
   67 |   list->head->data == data;
      |   ~~~~~~~~~~~~~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fc70f76
